load("@rules_cc//cc/toolchains:args.bzl", "cc_args")
load("@rules_cc//cc/toolchains/impl:documented_api.bzl", "cc_args_list")

package(default_visibility = ["//toolchain/runtimes:__subpackages__"])

# compile_actions minus assemble_actions (only preprocess_assemble)
OPT_FLAGS_COMPILE_ACTIONS = [
    "@rules_cc//cc/toolchains/actions:cpp_compile_actions",
    "@rules_cc//cc/toolchains/actions:c_compile_actions",
    "@rules_cc//cc/toolchains/actions:preprocess_assemble",
    "@rules_cc//cc/toolchains/actions:objc_compile",
    "@rules_cc//cc/toolchains/actions:objcpp_compile",
]

# libc must be compiled with optimizations (should match with above)
cc_args(
    name = "opt_compile_flags",
    # compile_actions minus assemble_actions (only preprocess_assemble)
    actions = OPT_FLAGS_COMPILE_ACTIONS,
    args = [
        "-DNDEBUG",
        "-O2",
    ],
)

cc_args(
    name = "dbg_compile_flags",
    actions = OPT_FLAGS_COMPILE_ACTIONS,
    args = [
        "-D_DEBUG",
        "-O0",
        "-g",
    ],
)

cc_args_list(
    name = "optimization_flags",
    args = select({
        "//config:runtimes_optimization_mode_debug": [
            ":dbg_compile_flags",
        ],
        "//conditions:default": [
            ":opt_compile_flags",
        ],
    }),
)

cc_args_list(
    name = "ubsan_flags",
    args = select({
        # We just need to recompile with sanitizer flags, don't need linker flags.
        # And in fact linker flags will cause a cycle. If we ever need a sanitizer
        # for compilation, we would need an extra bootstrap stage.
        "//config:ubsan_enabled": [
            "//toolchain/args:ubsan_compiler_flags",
        ],
        "//conditions:default": [],
    }),
)

cc_args_list(
    name = "cfi_flags",
    args = select({
        # We just need to recompile with sanitizer flags, don't need linker flags.
        # And in fact linker flags will cause a cycle. If we ever need a sanitizer
        # for compilation, we would need an extra bootstrap stage.
        "//config:cfi_enabled": [
            "//toolchain/args:cfi_compiler_flags",
        ],
        "//conditions:default": [],
    }),
)

cc_args_list(
    name = "msan_flags",
    args = select({
        # We just need to recompile with sanitizer flags, don't need linker flags.
        # And in fact linker flags will cause a cycle. If we ever need a sanitizer
        # for compilation, we would need an extra bootstrap stage.
        "//config:msan_enabled": [
            "//toolchain/args:msan_compiler_flags",
        ],
        "//conditions:default": [],
    }),
)

cc_args_list(
    name = "dfsan_flags",
    args = select({
        # We just need to recompile with sanitizer flags, don't need linker flags.
        # And in fact linker flags will cause a cycle. If we ever need a sanitizer
        # for compilation, we would need an extra bootstrap stage.
        "//config:dfsan_enabled": [
            "//toolchain/args:dfsan_compiler_flags",
        ],
        "//conditions:default": [],
    }),
)

cc_args_list(
    name = "nsan_flags",
    args = select({
        # We just need to recompile with sanitizer flags, don't need linker flags.
        # And in fact linker flags will cause a cycle. If we ever need a sanitizer
        # for compilation, we would need an extra bootstrap stage.
        "//config:nsan_enabled": [
            "//toolchain/args:nsan_compiler_flags",
        ],
        "//conditions:default": [],
    }),
)

cc_args_list(
    name = "safestack_flags",
    args = select({
        # We just need to recompile with sanitizer flags, don't need linker flags.
        # And in fact linker flags will cause a cycle. If we ever need a sanitizer
        # for compilation, we would need an extra bootstrap stage.
        "//config:safestack_enabled": [
            "//toolchain/args:safestack_compiler_flags",
        ],
        "//conditions:default": [],
    }),
)

cc_args_list(
    name = "rtsan_flags",
    args = select({
        # We just need to recompile with sanitizer flags, don't need linker flags.
        # And in fact linker flags will cause a cycle. If we ever need a sanitizer
        # for compilation, we would need an extra bootstrap stage.
        "//config:rtsan_enabled": [
            "//toolchain/args:rtsan_compiler_flags",
        ],
        "//conditions:default": [],
    }),
)

cc_args_list(
    name = "tysan_flags",
    args = select({
        # We just need to recompile with sanitizer flags, don't need linker flags.
        # And in fact linker flags will cause a cycle. If we ever need a sanitizer
        # for compilation, we would need an extra bootstrap stage.
        "//config:tysan_enabled": [
            "//toolchain/args:tysan_compiler_flags",
        ],
        "//conditions:default": [],
    }),
)

cc_args_list(
    name = "tsan_flags",
    args = select({
        # We just need to recompile with sanitizer flags, don't need linker flags.
        # And in fact linker flags will cause a cycle. If we ever need a sanitizer
        # for compilation, we would need an extra bootstrap stage.
        "//config:tsan_enabled": [
            "//toolchain/args:tsan_compiler_flags",
        ],
        "//conditions:default": [],
    }),
)

cc_args_list(
    name = "asan_flags",
    args = select({
        # We just need to recompile with sanitizer flags, don't need linker flags.
        # And in fact linker flags will cause a cycle. If we ever need a sanitizer
        # for compilation, we would need an extra bootstrap stage.
        "//config:asan_enabled": [
            "//toolchain/args:asan_compiler_flags",
        ],
        "//conditions:default": [],
    }),
)

cc_args_list(
    name = "lsan_flags",
    args = select({
        # We just need to recompile with sanitizer flags, don't need linker flags.
        # And in fact linker flags will cause a cycle. If we ever need a sanitizer
        # for compilation, we would need an extra bootstrap stage.
        "//config:lsan_enabled": [
            "//toolchain/args:lsan_compiler_flags",
        ],
        "//conditions:default": [],
    }),
)

cc_args_list(
    name = "profile_flags",
    args = select({
        "//config:profile_enabled": [
            "//toolchain/args:profile_compiler_flags",
        ],
        "//conditions:default": [],
    }),
)

# TODO(cerisier): this needs to differ per runtime (e.g libc++ still need crtbegin)
cc_args(
    name = "hermetic_link_flags",
    actions = [
        "@rules_cc//cc/toolchains/actions:link_actions",
    ],
    args = select({
        "//toolchain:runtimes_all": [],
        "//toolchain:runtimes_stage1": [
            "-nostdlib++",
        ],
        "//toolchain:runtimes_none": [
            "-nostdlib",
        ],
    }),
)
